--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                           <a style="color: white;" class="nav-link" href="/Aboutus.html">About</a>
                       </li>
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link" href="/contactus.html">Contact</a>
+                          <a style="color: white;" class="nav-link" href="contactus.html">Contact</a>
                       </li>
                   </ul>
               </div>
