--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                           <a style="color: white;" class="nav-link" href="/Products.html">Products</a>
                       </li>
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link" href="/Aboutus.html">About</a>
+                          <a style="color: white;" class="nav-link" href="/pages/Aboutus.html">About</a>
                       </li>
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link" href="contactus.html">Contact</a>
+                          <a style="color: white;" class="nav-link" href="/contactus.html">Contact</a>
                       </li>
                   </ul>
               </div>
