--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                           <a style="color: white;" class="nav-link active" aria-current="page" href="/index.html">Home</a>
                       </li>
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link" href="/features.html">Features</a>
+                          <a style="color: white;" class="nav-link" href="pages/features.html">Features</a>
                       </li>
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link" href="/Products.html">Products</a>
+                          <a style="color: white;" class="nav-link" href="pages/Products.html">Products</a>
                       </li>
                       <li class="nav-item">
                           <a style="color: white;" class="nav-link" href="/pages/Aboutus.html">About</a>
                       </li>
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link" href="/contactus.html">Contact</a>
+                          <a style="color: white;" class="nav-link" href="pages/contactus.html">Contact</a>
                       </li>
                   </ul>
               </div>
