--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ms-auto">
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                          <a style="color: white;" class="nav-link active" aria-current="page" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
                           <a style="color: white;" class="nav-link" href="pages/features.html">Features</a>
@@ -63,7 +63,7 @@
                           <a style="color: white;" class="nav-link" href="pages/Products.html">Products</a>
                       </li>
                       <li class="nav-item">
-                          <a style="color: white;" class="nav-link" href="/pages/Aboutus.html">About</a>
+                          <a style="color: white;" class="nav-link" href="pages/Aboutus.html">About</a>
                       </li>
                       <li class="nav-item">
                           <a style="color: white;" class="nav-link" href="pages/contactus.html">Contact</a>
