--- a/pages/Products.html
+++ b/pages/Products.html
@@ -32,20 +32,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a style="color: black;" class="nav-link active" aria-current="page" href="/11.3 TinDog Project/index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a style="color: black;" class="nav-link" href="/11.3 TinDog Project/pages/features.html">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a style="color: black;" class="nav-link" href="/11.3 TinDog Project/pages/Products.html">Products</a>
-                        </li>
-                        <li class="nav-item">
-                            <a style="color: black;" class="nav-link" href="/11.3 TinDog Project/pages/Aboutus.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a style="color: black;" class="nav-link" href="/11.3 TinDog Project/pages/contactus.html">Contact</a>
-                        </li>
+                          <a style="color: white;" class="nav-link active" aria-current="page" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a style="color: white;" class="nav-link" href="pages/features.html">Features</a>
+                      </li>
+                      <li class="nav-item">
+                          <a style="color: white;" class="nav-link" href="pages/Products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                          <a style="color: white;" class="nav-link" href="pages/Aboutus.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                          <a style="color: white;" class="nav-link" href="pages/contactus.html">Contact</a>
+                      </li>
                     </ul>
                 </div>
             </div>
